@startuml
'!pragma layout smetana
'skin rose
skinparam classAttributeIconSize 0

title [Structural] Flyweight Pattern

class Client

class FlyweightFactory {
  - _flyweights : map<key, Flyweight*>
  --
  ~FlyweightFactory()
  ..
  + getFlyweight(key)
}

interface Flyweight {
  + {abstract} ~Flyweight()
  ..
  + {abstract} operation(extrinsic)
}
class SharedFlyweight {
  - _intrinsicState
  --
  + SharedFlyweight(intrinsic)
  ..
  + operation(extrinsic)
}
class UnsharedFlyweight {
  - _allState
  --
  + UnsharedFlyweight(allState)
  ..
  + operation(extrinsic)
}

Client --> FlyweightFactory
FlyweightFactory o- Flyweight
Flyweight <|.. SharedFlyweight
Flyweight <|.. UnsharedFlyweight

hide empty members

@enduml